fix(swiper): 修复页面中未设置 z-index 的 fixed 元素无法覆盖 swiper 问题

--- a/packages/nutui/components/swiper/index.scss
+++ b/packages/nutui/components/swiper/index.scss
@@ -1,6 +1,5 @@
 .nut-swiper {
   position: relative;
-  z-index: 1;
   box-sizing: content-box;
   display: flex;
   overflow: hidden;
